Archive and rhotuc2

--- a/ObsReport_Aug14.ipynb
+++ b/ObsReport_Aug14.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:489316b52b5e4d40228b976d5b83515ae1581c5656f5ddfa0dda77b42d6aae03"
+  "signature": "sha256:4870c6f615a11b801902f1f611c885baf218a3d8a0feeccf618c9d22c2159d21"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -11,16 +11,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "import pyfits as pf\n",
-      "import numpy as np\n",
-      "import pylab as plt\n",
-      "import os\n",
-      "import glob\n",
-      "import pickle\n",
-      "import RVTools as RVT\n",
-      "import toolbox"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": [],
@@ -149,39 +140,52 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "24./100*7."
+      "cd .."
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 66,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "1.68"
+        "/Users/Carlos/Documents/HERMES/data\n"
        ]
       }
      ],
-     "prompt_number": 66
+     "prompt_number": 98
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "import pyfits as pf\n",
+      "import numpy as np\n",
+      "import pylab as plt\n",
+      "import os\n",
+      "import glob\n",
+      "import pickle\n",
+      "import RVTools as RVT\n",
+      "import toolbox\n",
+      "\n",
       "# raw = []\n",
       "print 'Obs & Filename & Field Name & Plate & MJD & Relative Day (days) & Exp Time (s) \\\\\\\\'\n",
       "# good_targets = np.array(['rhoTuc #176 (Pivot 175)', 'HD1581 #176 (Pivot 175)','HD285507 #227 (Pivot 223)' ])\n",
-      "good_targets = np.array(['HD285507 #227 (Pivot 223)' ])\n",
+      "# good_targets = np.array(['HD285507 #227 (Pivot 223)' ])\n",
+      "good_targets = np.array(['M67 12V14','M67 Bright Stars' ])\n",
       "# good_targets = np.array(['HD1581 #176 (Pivot 175)'])\n",
       "# good_targets = np.array(['47Tuc center'])\n",
       "\n",
       "# good_pivots = [175,175,224]\n",
       "t0 = 0  \n",
       "order = 0 \n",
+      "dirs = glob.glob('*')\n",
+      "# print dirs\n",
       "for j in dirs:\n",
-      "    os.chdir(j)\n",
-      "    for i in glob.glob('*.fits'):\n",
+      "#     print os.path.abspath(j +'/data/ccd_1/')\n",
+      "#     os.chdir(j+'/data/ccd_1/')\n",
+      "#     print j +'/data/ccd_1/'\n",
+      "    for i in glob.glob(os.path.abspath(j +'/data/ccd_1/*.fits')):\n",
       "        a = pf.open(i)\n",
       "        if a[0].header['NDFCLASS'] == 'MFOBJECT':\n",
       "            if a[0].header['OBJECT'] in good_targets:\n",
@@ -192,7 +196,7 @@
       "                if t0==0:t0=UTMJD\n",
       "                tDiff=UTMJD-t0\n",
       "#                 print str(order)+' & '+ i+' & HD1581 & '+a[0].header['SOURCE']+' & '+str(UTMJD)+' & '+str(tDiff)+' & '+str(a[0].header['EXPOSED']) +' \\\\\\\\'\n",
-      "                print str(order)+' & '+ i+' & HD285507 & '+a[0].header['SOURCE']+' & '+str(UTMJD)+' & '+str(tDiff)+' & '+str(a[0].header['EXPOSED']) +' \\\\\\\\'\n",
+      "                print str(order)+' & '+ i.split('/')[-1]+' & HD285507 & '+a[0].header['SOURCE']+' & '+str(UTMJD)+' & '+str(tDiff)+' & '+str(a[0].header['EXPOSED']) +' \\\\\\\\'\n",
       "#                 print str(order)+' & '+ i+' & '+a[0].header['OBJECT']+' & '+a[0].header['SOURCE']+' & '+str(UTMJD)+' & '+str(tDiff)+' & '+str(a[0].header['EXPOSED']) +' \\\\\\\\'\n",
       "                order +=1\n",
       "#                 raw.append((i, a[0].header['OBJECT'],a[0].header['SOURCE'],a[0].header['UTMJD'],a[0].header['EXPOSED']))            \n",
@@ -207,6 +211,15 @@
        "stream": "stdout",
        "text": [
         "Obs & Filename & Field Name & Plate & MJD & Relative Day (days) & Exp Time (s) \\\\\n",
+        "/Users/Carlos/Documents/HERMES/data/140211/data/ccd_1\n",
+        "/Users/Carlos/Documents/HERMES/data/140820/data/ccd_1"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "0 & 20aug10039.fits & HD285507 & Plate 1 & 56889.7346991 & 0.0 & 600.0 \\\\"
        ]
       },
@@ -217,6 +230,14 @@
         "\n",
         "1 & 20aug10040.fits & HD285507 & Plate 1 & 56889.7479051 & 0.0132060188116 & 1200.0 \\\\\n",
         "2 & 20aug10041.fits & HD285507 & Plate 1 & 56889.7628356 & 0.0281365744086 & 1200.0 \\\\\n",
+        "/Users/Carlos/Documents/HERMES/data/140821/data/ccd_1"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "3 & 21aug10038.fits & HD285507 & Plate 1 & 56890.7448958 & 1.01019675931 & 1800.0 \\\\"
        ]
       },
@@ -226,7 +247,8 @@
        "text": [
         "\n",
         "4 & 21aug10039.fits & HD285507 & Plate 1 & 56890.7666204 & 1.03192129633 & 1800.0 \\\\\n",
-        "5 & 21aug10040.fits & HD285507 & Plate 1 & 56890.7883449 & 1.05364583334 & 1800.0 \\\\"
+        "5 & 21aug10040.fits & HD285507 & Plate 1 & 56890.7883449 & 1.05364583334 & 1800.0 \\\\\n",
+        "/Users/Carlos/Documents/HERMES/data/140822/data/ccd_1"
        ]
       },
       {
@@ -243,7 +265,8 @@
        "text": [
         "\n",
         "7 & 22aug10042.fits & HD285507 & Plate 1 & 56891.7431366 & 2.00843750008 & 1200.0 \\\\\n",
-        "8 & 22aug10043.fits & HD285507 & Plate 1 & 56891.7579167 & 2.0232175926 & 1200.0 \\\\"
+        "8 & 22aug10043.fits & HD285507 & Plate 1 & 56891.7579167 & 2.0232175926 & 1200.0 \\\\\n",
+        "/Users/Carlos/Documents/HERMES/data/140824/data/ccd_1"
        ]
       },
       {
@@ -260,14 +283,8 @@
        "text": [
         "\n",
         "10 & 24aug10064.fits & HD285507 & Plate 1 & 56893.7959375 & 4.06123842599 & 1200.0 \\\\\n",
-        "11 & 24aug10065.fits & HD285507 & Plate 1 & 56893.8075926 & 4.07289351849 & 600.0 \\\\"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "11 & 24aug10065.fits & HD285507 & Plate 1 & 56893.8075926 & 4.07289351849 & 600.0 \\\\\n",
+        "/Users/Carlos/Documents/HERMES/data/140825/data/ccd_1\n",
         "12 & 25aug10049.fits & HD285507 & Plate 1 & 56894.7653819 & 5.0306828704 & 1200.0 \\\\"
        ]
       },
@@ -277,18 +294,15 @@
        "text": [
         "\n",
         "13 & 25aug10050.fits & HD285507 & Plate 1 & 56894.7801736 & 5.04547453739 & 1200.0 \\\\\n",
-        "14 & 25aug10051.fits & HD285507 & Plate 1 & 56894.7949537 & 5.06025462991 & 1200.0 \\\\"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
+        "14 & 25aug10051.fits & HD285507 & Plate 1 & 56894.7949537 & 5.06025462991 & 1200.0 \\\\\n",
+        "/Users/Carlos/Documents/HERMES/data/20131112.txt/data/ccd_1\n",
+        "/Users/Carlos/Documents/HERMES/data/20140107.txt/data/ccd_1\n",
+        "/Users/Carlos/Documents/HERMES/data/20140109.txt/data/ccd_1\n",
+        "/Users/Carlos/Documents/HERMES/data/20140820.txt/data/ccd_1\n"
        ]
       }
      ],
-     "prompt_number": 81
+     "prompt_number": 101
     },
     {
      "cell_type": "code",
