--- a/RVPlots.ipynb
+++ b/RVPlots.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7db9b2635af19c9defe1074b3b66e7df99c772b532c52b74a4a6927a7dc090af"
+  "signature": "sha256:cf0ae86e762fcf24797e264f4ed3e26af0f518ce1dd817d3891f117994bdca68"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -45,14 +45,14 @@
       "        thisCam = thisStar.exposures.cameras[cam]\n",
       "        fileNames =  thisCam.fileNames\n",
       "        nFluxes = thisCam.wavelengths.shape[0]\n",
-      "        ax[0,0].set_yticks(np.arange(0,nFluxes))\n",
-      "        ax[0,0].set_ylim(-1,nFluxes)\n",
+      "#         ax[0,0].set_yticks(np.arange(0,nFluxes))\n",
+      "#         ax[0,0].set_ylim(-1,nFluxes)\n",
       "    \n",
       "        for i in np.arange(nFluxes):\n",
       "                if np.sum(thisCam.wavelengths[i])>0:\n",
       "                    d, f = thisCam.wavelengths[i], thisCam.red_fluxes[i]/np.median(thisCam.red_fluxes[i])\n",
       "                    if cam ==0:\n",
-      "                        ax[0,0].plot(d, f+i, 'b')\n",
+      "                        ax[0,0].plot(d, f+i*10, 'b')\n",
       "                    elif cam==1:\n",
       "                        ax[0,1].plot(d, f+i, 'g')\n",
       "                    elif cam==2:\n",
@@ -66,18 +66,18 @@
       "#     plt.gca().set_yticks(range(thisCam.wavelengths.shape[0]))\n",
       "#     plt.gca().set_yticklabels(thisCam.fileNames)\n",
       "\n",
-      "    ax.set_yticklabels(thisCam.fileNames)\n",
-      "    ax.set_yticks(range(thisCam.wavelengths.shape[0]))\n",
+      "#     ax.set_yticklabels(thisCam.fileNames)\n",
+      "#     ax.set_yticks(range(thisCam.wavelengths.shape[0]))\n",
       "\n",
       "    \n",
-      "    plt.xticks(rotation=70)\n",
+      "#     plt.xticks(rotation=70)\n",
       "\n",
       "#     ax[0,0].set_yticklabels(fileNames)\n",
       "    if booSave==True: \n",
       "        try:\n",
-      "            plt.savefig('plots/' + objName[:-4] + 'SOvl_cam' + str(cam+1), dpi = 1000 )\n",
+      "            plt.savefig('plots/' + thisStar.name + 'SOvl_cam' + str(cam+1), dpi = 1000 )\n",
       "        except:\n",
-      "            pass\n",
+      "            print 'Couldn''t save'\n",
       "    if booShow==True: plt.show()\n"
      ],
      "language": "python",
@@ -238,7 +238,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def RVs_all_stars_NPYs( sigmaClip = -1, RVClip = -1, topStars = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
+      "def RVs_all_stars_NPYs(idStars = [], sigmaClip = -1, RVClip = -1, topStars = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
       "    \n",
       "    data=np.load('npy/data.npy')\n",
       "    RVs=np.load('npy/RVs.npy')\n",
@@ -297,13 +297,24 @@
       "            else:\n",
       "                plt.title(title, y=1.1)\n",
       "            \n",
-      "\n",
+      "            if data[i,0] in idStars:\n",
+      "                m = '+'\n",
+      "                s=100\n",
+      "                c='k'\n",
+      "            else:\n",
+      "                m = 'o'\n",
+      "                s=1\n",
+      "                c=colors[cam]\n",
+      "                \n",
+      "            \n",
       "#             plt.errorbar(X, Y[i,:,cam], yerr=YERR[i,:,cam]*1000, fmt='.', label = labels[cam], color = colors[cam])\n",
       "            if booBaryCorrect==True: \n",
-      "                plt.scatter(X, Y[i,:,cam]- baryVels, label = labels[cam], color = colors[cam])\n",
-      "            else:\n",
-      "                plt.scatter(X, Y[i,:,cam], label = labels[cam], color = colors[cam])\n",
+      "                plt.scatter(X, Y[i,:,cam]- baryVels, label = labels[cam], color = c, s=s, marker=m)\n",
       "\n",
+      "            else:\n",
+      "                plt.scatter(X, Y[i,:,cam], label = labels[cam], color = c, s=s, marker=m)\n",
+      "\n",
+      "            \n",
       "#             plt.plot(X, Y[i,:,cam], label = labels[cam], color = colors[cam])\n",
       "#             plt.scatter(X, Y[i,:,cam], label = labels[cam], color = 'k')\n",
       "\n",
@@ -651,8 +662,8 @@
       "    data=np.load('npy/data.npy')\n",
       "    RVs=np.load('npy/RVs.npy')\n",
       "    i=0\n",
-      "    for cam in range(RVs.shape[2])[:]:\n",
-      "        for epoch in range(RVs.shape[1])[:]:\n",
+      "    for cam in range(RVs.shape[2])[1:2]:\n",
+      "        for epoch in range(RVs.shape[1])[3:]:\n",
       "            for star in range(RVs.shape[0])[:]:\n",
       "#                 if np.abs(RVs[star,epoch,cam])>RVref:\n",
       "#                 if ((RVs[star,epoch,cam]<-1000) & (RVs[star,epoch,cam]>-3000)):\n",
@@ -700,32 +711,6 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 41
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 42
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
