--- a/RVTools.ipynb
+++ b/RVTools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:778113514284ab8a3574a57437b9bbc36e11086dd99723b7f09c287e4f76b262"
+  "signature": "sha256:ece7c8975019eb202794dd1a0c98bd47a3c9a24e13d5efdbb1290ff6241a32e1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -519,6 +519,80 @@
       "\tx = np.linalg.solve(M,b)\n",
       "\t#The first N elements of x contain the weights.\n",
       "\treturn x[0:N]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def calibrator_weights2(deltay,SNR):\n",
+      "\n",
+      "    c = SNR/np.abs(deltay)\n",
+      "    c[deltay==0]=0\n",
+      "    c /=np.sum(c)\n",
+      "    return c\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def create_allW(data = [], SNRs = []):\n",
+      "\n",
+      "    if ((data!=[]) and (SNRs!=[])):\n",
+      "\n",
+      "        #load function that translates pivot# to y-pixel  p2y(pivot)=y-pixel of pivot\n",
+      "        p2y = pivot_to_y('/Users/Carlos/Documents/HERMES/reductions/rhoTuc_6.2/0_20aug/1/20aug10042tlm.fits') \n",
+      "\n",
+      "        #gets the y position of for the data array\n",
+      "        datay = p2y[data[:,2].astype(float).astype(int)]\n",
+      "\n",
+      "        #Creates empty array for relative weights\n",
+      "        #allW[Weights, camera, staridx of the star to be corrected]\n",
+      "        allW = np.zeros((data.shape[0],4,data.shape[0]))\n",
+      "\n",
+      "        for thisStarIdx in range(data.shape[0]):\n",
+      "\n",
+      "            #converts datay into deltay\n",
+      "            deltay = datay-datay[thisStarIdx]\n",
+      "\n",
+      "            for cam in range(4):\n",
+      "\n",
+      "                thisSNRs = SNRs[:,0,cam].copy()\n",
+      "                thisSNRs[np.isnan(thisSNRs)]=1  #sets NaNs into SNR=1 \n",
+      "\n",
+      "                W = calibrator_weights(deltay,thisSNRs)\n",
+      "                allW[:,cam,thisStarIdx] = W\n",
+      "    else:\n",
+      "        print 'Create allW: Input arrays missing'\n",
+      "        allW =[]\n",
+      "\n",
+      "    return allW"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def create_RV_corr(RVs, allW, RVClip = 1e17):\n",
+      "    RV_corr = np.zeros(RVs.shape)\n",
+      "    RVs[np.abs(RVs)>RVClip]=0\n",
+      "    for thisStarIdx in range(data.shape[0]):\n",
+      "        for epoch in range(RVs.shape[1]):\n",
+      "            for cam in range(4):\n",
+      "                RV_corr[thisStarIdx,epoch,cam] = np.nansum(allW[:,cam,thisStarIdx]*RVs[:,epoch,cam])\n",
+      "    return RV_corr"
      ],
      "language": "python",
      "metadata": {},
